// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toggle should render default Toggle 1`] = `
.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 1rem;
  height: 1.75rem;
  width: 3.25rem;
  overflow: hidden;
}

.c5 {
  border-radius: 1rem;
  border: 0.125rem solid transparent;
  box-sizing: border-box;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  background-color: #6f7171;
  color: #000000;
  height: 1.75rem;
  -webkit-transition: background-color 100ms;
  transition: background-color 100ms;
  -webkit-transition-timing-function: cubic-bezier(0.4,0,0.2,1);
  transition-timing-function: cubic-bezier(0.4,0,0.2,1);
  width: 3.25rem;
}

.c5::before {
  background-color: #ffffff;
  border-radius: 50%;
  bottom: 0;
  content: '';
  height: 1.5rem;
  left: 0 !important;
  margin-bottom: auto;
  margin-top: auto;
  padding-left: 0;
  position: absolute;
  top: 0;
  -webkit-transition: left 100ms;
  transition: left 100ms;
  width: 1.5rem;
  z-index: 1;
  box-shadow: 0px 1px 10px rgba(0,0,0,0.24),0px 2px 4px rgba(0,0,0,0.08);
}

.c5:active,
.c5:focus {
  outline: none;
}

.c4 {
  opacity: 0;
  margin: 0;
  width: 2rem;
  height: 1rem;
  position: absolute;
  top: 0;
  pointer-events: auto;
}

.c4:hover {
  cursor: pointer;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  border-radius: 1rem;
  display: inline-block;
  position: relative;
  height: 1.75rem;
  outline: 0;
}

.c2 {
  left: 50%;
  position: absolute;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  text-align: center;
  top: 50%;
  cursor: pointer;
  display: inline-block;
  height: 2.75rem;
  width: 100%;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <span
      aria-hidden="true"
      class="c2"
      data-testid="test-hitArea"
    />
    <label
      class="c3"
      for="1"
      id="1"
    >
      <input
        class="c4"
        data-testid="test-toggle"
        id="1"
        tabindex="0"
        type="checkbox"
        value="default Toggle"
      />
      <span
        aria-hidden="true"
        class="c5"
        tabindex="-1"
      />
    </label>
  </div>
</div>
`;

exports[`Toggle should render default Toggle in active state 1`] = `
.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 1rem;
  height: 1.75rem;
  width: 3.25rem;
  overflow: hidden;
}

.c5 {
  border-radius: 1rem;
  border: 0.125rem solid transparent;
  box-sizing: border-box;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  background-color: #008331;
  color: #000000;
  height: 1.75rem;
  -webkit-transition: background-color 100ms;
  transition: background-color 100ms;
  -webkit-transition-timing-function: cubic-bezier(0.4,0,0.2,1);
  transition-timing-function: cubic-bezier(0.4,0,0.2,1);
  width: 3.25rem;
}

.c5::before {
  background-color: #ffffff;
  border-radius: 50%;
  bottom: 0;
  content: '';
  height: 1.5rem;
  left: 1.5rem !important;
  margin-bottom: auto;
  margin-top: auto;
  padding-left: 0;
  position: absolute;
  top: 0;
  -webkit-transition: left 100ms;
  transition: left 100ms;
  width: 1.5rem;
  z-index: 1;
  box-shadow: 0px 1px 10px rgba(0,0,0,0.24),0px 2px 4px rgba(0,0,0,0.08);
}

.c5:active,
.c5:focus {
  outline: none;
}

.c4 {
  opacity: 0;
  margin: 0;
  width: 2rem;
  height: 1rem;
  position: absolute;
  top: 0;
  pointer-events: auto;
}

.c4:hover {
  cursor: pointer;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  border-radius: 1rem;
  display: inline-block;
  position: relative;
  height: 1.75rem;
  outline: 0;
}

.c2 {
  left: 50%;
  position: absolute;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  text-align: center;
  top: 50%;
  cursor: pointer;
  display: inline-block;
  height: 2.75rem;
  width: 100%;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <span
      aria-hidden="true"
      class="c2"
      data-testid="test-hitArea"
    />
    <label
      class="c3"
      for="1"
      id="1"
    >
      <input
        aria-label="toggle"
        class="c4"
        data-testid="test-toggle"
        id="1"
        name="toggle"
        tabindex="0"
        type="checkbox"
        value="default Toggle"
      />
      <span
        aria-hidden="true"
        class="c5"
        tabindex="-1"
      />
    </label>
  </div>
</div>
`;

exports[`Toggle should render default Toggle in focusState 1`] = `
.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 1rem;
  height: 1.75rem;
  width: 3.25rem;
  overflow: hidden;
}

.c5 {
  border-radius: 1rem;
  border: 0.125rem solid transparent;
  box-sizing: border-box;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  background-color: #6f7171;
  color: #000000;
  height: 1.75rem;
  -webkit-transition: background-color 100ms;
  transition: background-color 100ms;
  -webkit-transition-timing-function: cubic-bezier(0.4,0,0.2,1);
  transition-timing-function: cubic-bezier(0.4,0,0.2,1);
  width: 3.25rem;
}

.c5::before {
  background-color: #ffffff;
  border-radius: 50%;
  bottom: 0;
  content: '';
  height: 1.5rem;
  left: 0 !important;
  margin-bottom: auto;
  margin-top: auto;
  padding-left: 0;
  position: absolute;
  top: 0;
  -webkit-transition: left 100ms;
  transition: left 100ms;
  width: 1.5rem;
  z-index: 1;
  box-shadow: 0px 1px 10px rgba(0,0,0,0.24),0px 2px 4px rgba(0,0,0,0.08);
}

.c5:active,
.c5:focus {
  outline: none;
}

.c4 {
  opacity: 0;
  margin: 0;
  width: 2rem;
  height: 1rem;
  position: absolute;
  top: 0;
  pointer-events: auto;
}

.c4:hover {
  cursor: pointer;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  border-radius: 1rem;
  display: inline-block;
  position: relative;
  height: 1.75rem;
  outline: 0;
}

.c2 {
  left: 50%;
  position: absolute;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  text-align: center;
  top: 50%;
  cursor: pointer;
  display: inline-block;
  height: 2.75rem;
  width: 100%;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <span
      aria-hidden="true"
      class="c2"
      data-testid="test-hitArea"
    />
    <label
      class="c3"
      for="1"
      id="1"
    >
      <input
        class="c4"
        data-testid="test-toggle"
        id="1"
        tabindex="0"
        type="checkbox"
        value="default Toggle"
      />
      <span
        aria-hidden="true"
        class="c5"
        tabindex="-1"
      />
    </label>
  </div>
</div>
`;

exports[`Toggle should render default Toggle with inputId 1`] = `
.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 1rem;
  height: 1.75rem;
  width: 3.25rem;
  overflow: hidden;
}

.c5 {
  border-radius: 1rem;
  border: 0.125rem solid transparent;
  box-sizing: border-box;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  background-color: #6f7171;
  color: #000000;
  height: 1.75rem;
  -webkit-transition: background-color 100ms;
  transition: background-color 100ms;
  -webkit-transition-timing-function: cubic-bezier(0.4,0,0.2,1);
  transition-timing-function: cubic-bezier(0.4,0,0.2,1);
  width: 3.25rem;
}

.c5::before {
  background-color: #ffffff;
  border-radius: 50%;
  bottom: 0;
  content: '';
  height: 1.5rem;
  left: 0 !important;
  margin-bottom: auto;
  margin-top: auto;
  padding-left: 0;
  position: absolute;
  top: 0;
  -webkit-transition: left 100ms;
  transition: left 100ms;
  width: 1.5rem;
  z-index: 1;
  box-shadow: 0px 1px 10px rgba(0,0,0,0.24),0px 2px 4px rgba(0,0,0,0.08);
}

.c5:active,
.c5:focus {
  outline: none;
}

.c4 {
  opacity: 0;
  margin: 0;
  width: 2rem;
  height: 1rem;
  position: absolute;
  top: 0;
  pointer-events: auto;
}

.c4:hover {
  cursor: pointer;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  border-radius: 1rem;
  display: inline-block;
  position: relative;
  height: 1.75rem;
  outline: 0;
}

.c2 {
  left: 50%;
  position: absolute;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  text-align: center;
  top: 50%;
  cursor: pointer;
  display: inline-block;
  height: 2.75rem;
  width: 100%;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <span
      aria-hidden="true"
      class="c2"
      data-testid="test-hitArea"
    />
    <label
      class="c3"
      for="1"
      id="1"
    >
      <input
        aria-label="toggle"
        class="c4"
        data-testid="test-toggle"
        id="1"
        name="toggle"
        tabindex="0"
        type="checkbox"
        value="default Toggle"
      />
      <span
        aria-hidden="true"
        class="c5"
        tabindex="-1"
      />
    </label>
  </div>
</div>
`;

exports[`Toggle should render default inverted Toggle 1`] = `
.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 1rem;
  height: 1.75rem;
  width: 3.25rem;
  overflow: hidden;
}

.c5 {
  border-radius: 1rem;
  border: 0.125rem solid transparent;
  box-sizing: border-box;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  background-color: #6f7171;
  color: #000000;
  height: 1.75rem;
  -webkit-transition: background-color 100ms;
  transition: background-color 100ms;
  -webkit-transition-timing-function: cubic-bezier(0.4,0,0.2,1);
  transition-timing-function: cubic-bezier(0.4,0,0.2,1);
  width: 3.25rem;
}

.c5::before {
  background-color: #ffffff;
  border-radius: 50%;
  bottom: 0;
  content: '';
  height: 1.5rem;
  left: 0 !important;
  margin-bottom: auto;
  margin-top: auto;
  padding-left: 0;
  position: absolute;
  top: 0;
  -webkit-transition: left 100ms;
  transition: left 100ms;
  width: 1.5rem;
  z-index: 1;
  box-shadow: 0px 1px 10px rgba(0,0,0,0.24),0px 2px 4px rgba(0,0,0,0.08);
}

.c5:active,
.c5:focus {
  outline: none;
}

.c4 {
  opacity: 0;
  margin: 0;
  width: 2rem;
  height: 1rem;
  position: absolute;
  top: 0;
  pointer-events: auto;
}

.c4:hover {
  cursor: pointer;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  border-radius: 1rem;
  display: inline-block;
  position: relative;
  height: 1.75rem;
  outline: 0;
}

.c2 {
  left: 50%;
  position: absolute;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  text-align: center;
  top: 50%;
  cursor: pointer;
  display: inline-block;
  height: 2.75rem;
  width: 100%;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <span
      aria-hidden="true"
      class="c2"
      data-testid="test-hitArea"
    />
    <label
      class="c3"
      for="1"
      id="1"
    >
      <input
        class="c4"
        data-testid="test-toggle"
        id="1"
        tabindex="0"
        type="checkbox"
        value="default Toggle"
      />
      <span
        aria-hidden="true"
        class="c5"
        tabindex="-1"
      />
    </label>
  </div>
</div>
`;

exports[`Toggle should render disabled state Toggle 1`] = `
.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 1rem;
  height: 1.75rem;
  width: 3.25rem;
  overflow: hidden;
}

.c5 {
  border-radius: 1rem;
  border: 0.125rem solid transparent;
  box-sizing: border-box;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  background-color: #d8dada;
  color: #6f7171;
  height: 1.75rem;
  -webkit-transition: background-color 100ms;
  transition: background-color 100ms;
  -webkit-transition-timing-function: cubic-bezier(0.4,0,0.2,1);
  transition-timing-function: cubic-bezier(0.4,0,0.2,1);
  width: 3.25rem;
}

.c5::before {
  background-color: #f6f6f6;
  border-radius: 50%;
  bottom: 0;
  content: '';
  height: 1.5rem;
  left: 0 !important;
  margin-bottom: auto;
  margin-top: auto;
  padding-left: 0;
  position: absolute;
  top: 0;
  -webkit-transition: left 100ms;
  transition: left 100ms;
  width: 1.5rem;
  z-index: 1;
  box-shadow: 0px 1px 10px rgba(0,0,0,0.1),0px 2px 4px rgba(0,0,0,0.04);
}

.c5:active,
.c5:focus {
  outline: none;
}

.c4 {
  opacity: 0;
  margin: 0;
  width: 2rem;
  height: 1rem;
  position: absolute;
  top: 0;
  pointer-events: auto;
}

.c4:hover {
  cursor: pointer;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  border-radius: 1rem;
  display: inline-block;
  position: relative;
  height: 1.75rem;
  outline: 0;
}

.c2 {
  left: 50%;
  position: absolute;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  text-align: center;
  top: 50%;
  cursor: pointer;
  display: inline-block;
  height: 2.75rem;
  width: 100%;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <span
      aria-hidden="true"
      class="c2"
      data-testid="test-hitArea"
    />
    <label
      class="c3"
      disabled=""
      for="1"
      id="1"
    >
      <input
        class="c4"
        data-testid="test-toggle"
        disabled=""
        id="1"
        tabindex="-1"
        type="checkbox"
        value="disabled Toggle"
      />
      <span
        aria-hidden="true"
        class="c5"
        disabled=""
        tabindex="-1"
      />
    </label>
  </div>
</div>
`;

exports[`Toggle should render disabled state dark surface 1`] = `
.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 1rem;
  height: 1.75rem;
  width: 3.25rem;
  overflow: hidden;
}

.c6 {
  border-radius: 1rem;
  border: 0.125rem solid transparent;
  box-sizing: border-box;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  background-color: #333333;
  color: #a7a7a7;
  height: 1.75rem;
  -webkit-transition: background-color 100ms;
  transition: background-color 100ms;
  -webkit-transition-timing-function: cubic-bezier(0.4,0,0.2,1);
  transition-timing-function: cubic-bezier(0.4,0,0.2,1);
  width: 3.25rem;
}

.c6::before {
  background-color: #6f7171;
  border-radius: 50%;
  bottom: 0;
  content: '';
  height: 1.5rem;
  left: 0 !important;
  margin-bottom: auto;
  margin-top: auto;
  padding-left: 0;
  position: absolute;
  top: 0;
  -webkit-transition: left 100ms;
  transition: left 100ms;
  width: 1.5rem;
  z-index: 1;
  box-shadow: 0px 1px 10px rgba(0,0,0,0.1),0px 2px 4px rgba(0,0,0,0.04);
}

.c6:active,
.c6:focus {
  outline: none;
}

.c5 {
  opacity: 0;
  margin: 0;
  width: 2rem;
  height: 1rem;
  position: absolute;
  top: 0;
  pointer-events: auto;
}

.c5:hover {
  cursor: pointer;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  border-radius: 1rem;
  display: inline-block;
  position: relative;
  height: 1.75rem;
  outline: 0;
}

.c1 {
  font-size: 0.75rem;
  line-height: 1rem;
  font-family: Verizon-NHG-eTX;
  font-weight: 400;
  padding-right: 0.75rem;
  padding-left: 0;
  text-align: right;
}

.c3 {
  left: 50%;
  position: absolute;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  text-align: center;
  top: 50%;
  cursor: pointer;
  display: inline-block;
  height: 2.75rem;
  width: 100%;
}

<div
  class="c0"
>
  <div
    class="c1"
    style="color: rgb(167, 167, 167);"
  >
    Off
  </div>
  <div
    class="c2"
  >
    <span
      aria-hidden="true"
      class="c3"
      data-testid="test-hitArea"
    />
    <label
      class="c4"
      disabled=""
      for="1"
      id="1"
    >
      <input
        class="c5"
        data-testid="test-toggle"
        disabled=""
        id="1"
        tabindex="-1"
        type="checkbox"
        value="disabled dark"
      />
      <span
        aria-hidden="true"
        class="c6"
        disabled=""
        tabindex="-1"
      />
    </label>
  </div>
</div>
`;

exports[`Toggle should render disabled state dark surface 2`] = `
.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 1rem;
  height: 1.75rem;
  width: 3.25rem;
  overflow: hidden;
}

.c6 {
  border-radius: 1rem;
  border: 0.125rem solid transparent;
  box-sizing: border-box;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  background-color: #d8dada;
  color: #6f7171;
  height: 1.75rem;
  -webkit-transition: background-color 100ms;
  transition: background-color 100ms;
  -webkit-transition-timing-function: cubic-bezier(0.4,0,0.2,1);
  transition-timing-function: cubic-bezier(0.4,0,0.2,1);
  width: 3.25rem;
}

.c6::before {
  background-color: #f6f6f6;
  border-radius: 50%;
  bottom: 0;
  content: '';
  height: 1.5rem;
  left: 0 !important;
  margin-bottom: auto;
  margin-top: auto;
  padding-left: 0;
  position: absolute;
  top: 0;
  -webkit-transition: left 100ms;
  transition: left 100ms;
  width: 1.5rem;
  z-index: 1;
  box-shadow: 0px 1px 10px rgba(0,0,0,0.1),0px 2px 4px rgba(0,0,0,0.04);
}

.c6:active,
.c6:focus {
  outline: none;
}

.c5 {
  opacity: 0;
  margin: 0;
  width: 2rem;
  height: 1rem;
  position: absolute;
  top: 0;
  pointer-events: auto;
}

.c5:hover {
  cursor: pointer;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  border-radius: 1rem;
  display: inline-block;
  position: relative;
  height: 1.75rem;
  outline: 0;
}

.c1 {
  font-size: 0.75rem;
  line-height: 1rem;
  font-family: Verizon-NHG-eTX;
  font-weight: 400;
  padding-right: 0.75rem;
  padding-left: 0;
  text-align: right;
}

.c3 {
  left: 50%;
  position: absolute;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  text-align: center;
  top: 50%;
  cursor: pointer;
  display: inline-block;
  height: 2.75rem;
  width: 100%;
}

<div
  class="c0"
>
  <div
    class="c1"
    style="color: rgb(111, 113, 113);"
  >
    Off
  </div>
  <div
    class="c2"
  >
    <span
      aria-hidden="true"
      class="c3"
      data-testid="test-hitArea"
    />
    <label
      class="c4"
      disabled=""
      for="1"
      id="1"
    >
      <input
        class="c5"
        data-testid="test-toggle"
        disabled=""
        id="1"
        tabindex="-1"
        type="checkbox"
        value="disabled dark"
      />
      <span
        aria-hidden="true"
        class="c6"
        disabled=""
        tabindex="-1"
      />
    </label>
  </div>
</div>
`;

exports[`Toggle should render toggle default styles correctly 1`] = `
.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 1rem;
  height: 1.75rem;
  width: 3.25rem;
  overflow: hidden;
}

.c6 {
  border-radius: 1rem;
  border: 0.125rem solid transparent;
  box-sizing: border-box;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  background-color: #6f7171;
  color: #ffffff;
  height: 1.75rem;
  -webkit-transition: background-color 100ms;
  transition: background-color 100ms;
  -webkit-transition-timing-function: cubic-bezier(0.4,0,0.2,1);
  transition-timing-function: cubic-bezier(0.4,0,0.2,1);
  width: 3.25rem;
}

.c6::before {
  background-color: #ffffff;
  border-radius: 50%;
  bottom: 0;
  content: '';
  height: 1.5rem;
  left: 0 !important;
  margin-bottom: auto;
  margin-top: auto;
  padding-left: 0;
  position: absolute;
  top: 0;
  -webkit-transition: left 100ms;
  transition: left 100ms;
  width: 1.5rem;
  z-index: 1;
  box-shadow: 0px 1px 10px rgba(0,0,0,0.24),0px 2px 4px rgba(0,0,0,0.08);
}

.c6:active,
.c6:focus {
  outline: none;
}

.c5 {
  opacity: 0;
  margin: 0;
  width: 2rem;
  height: 1rem;
  position: absolute;
  top: 0;
  pointer-events: auto;
}

.c5:hover {
  cursor: pointer;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  border-radius: 1rem;
  display: inline-block;
  position: relative;
  height: 1.75rem;
  outline: 0;
}

.c1 {
  font-size: 0.75rem;
  line-height: 1rem;
  font-family: Verizon-NHG-eTX;
  font-weight: 400;
  padding-right: 0.75rem;
  padding-left: 0;
  text-align: right;
}

.c3 {
  left: 50%;
  position: absolute;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  text-align: center;
  top: 50%;
  cursor: pointer;
  display: inline-block;
  height: 2.75rem;
  width: 100%;
}

<div
  class="c0"
>
  <div
    class="c1"
    style="color: rgb(255, 255, 255);"
  >
    Off
  </div>
  <div
    class="c2"
  >
    <span
      aria-hidden="true"
      class="c3"
      data-testid="test-hitArea"
    />
    <label
      class="c4"
      for="1"
      id="1"
    >
      <input
        class="c5"
        data-testid="test-toggle"
        id="1"
        tabindex="0"
        type="checkbox"
        value="default"
      />
      <span
        aria-hidden="true"
        class="c6"
        tabindex="-1"
      />
    </label>
  </div>
</div>
`;

exports[`should render disabled hitArea 1`] = `
.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 1rem;
  height: 1.75rem;
  width: 3.25rem;
  overflow: hidden;
}

.c5 {
  border-radius: 1rem;
  border: 0.125rem solid transparent;
  box-sizing: border-box;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  background-color: #d8dada;
  color: #6f7171;
  height: 1.75rem;
  -webkit-transition: background-color 100ms;
  transition: background-color 100ms;
  -webkit-transition-timing-function: cubic-bezier(0.4,0,0.2,1);
  transition-timing-function: cubic-bezier(0.4,0,0.2,1);
  width: 3.25rem;
}

.c5::before {
  background-color: #f6f6f6;
  border-radius: 50%;
  bottom: 0;
  content: '';
  height: 1.5rem;
  left: 0 !important;
  margin-bottom: auto;
  margin-top: auto;
  padding-left: 0;
  position: absolute;
  top: 0;
  -webkit-transition: left 100ms;
  transition: left 100ms;
  width: 1.5rem;
  z-index: 1;
  box-shadow: 0px 1px 10px rgba(0,0,0,0.1),0px 2px 4px rgba(0,0,0,0.04);
}

.c5:active,
.c5:focus {
  outline: none;
}

.c4 {
  opacity: 0;
  margin: 0;
  width: 2rem;
  height: 1rem;
  position: absolute;
  top: 0;
  pointer-events: auto;
}

.c4:hover {
  cursor: pointer;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  border-radius: 1rem;
  display: inline-block;
  position: relative;
  height: 1.75rem;
  outline: 0;
}

.c2 {
  left: 50%;
  position: absolute;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  text-align: center;
  top: 50%;
  cursor: pointer;
  display: inline-block;
  height: 2.75rem;
  width: 100%;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <span
      aria-hidden="true"
      class="c2"
      data-testid="test-hitArea"
    />
    <label
      class="c3"
      disabled=""
      for="1"
      id="1"
    >
      <input
        class="c4"
        data-testid="test-toggle"
        disabled=""
        id="1"
        tabindex="-1"
        type="checkbox"
        value="disabled Toggle"
      />
      <span
        aria-hidden="true"
        class="c5"
        disabled=""
        tabindex="-1"
      />
    </label>
  </div>
</div>
`;
